--- a/web.css
+++ b/web.css
@@ -16,9 +16,9 @@
 {
     border: 2px solid rgb(19, 170, 170);
     color: rgb(32, 175, 175);
+    background: white;
     padding: 5px 35px 10px 35px;
 }
-
 .menu ul{
     display: flex;
     flex-direction: row;
@@ -38,16 +38,18 @@
 .text
 {
     color: rgb(126, 124, 124);
-    font-size: small;
+    font-size: 15px;
 }
 .box{
-    width: 200px;
-    height: 40px;
+    color: white;
+    background-color: rgb(3, 211, 200);
+    border: none;
+    padding: 0 10px;
+    width: 150px;
+    height: 35px;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    color: white;
-    background: rgb(3, 211, 200);
     justify-content: center;
 }
 .center
@@ -82,26 +84,217 @@
     color: rgb(0, 174, 255);
 }
 hr{
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.26);
+    margin: 0 100px;
+}
+.content2
+{
+    margin:100px 0;
+    padding-bottom: 50px;
 }
 .div2,.div3{
-    padding: 100px;
-    margin:3px auto;
+    padding: 20px;
+    margin:10px auto;
     text-align: center;
-    
 }
-.div2 p{
+.theme,.text{
     margin :10px 0;
 }
 .div2 img
 {
-    padding: 5px;
-    margin-right: 50px;
+    padding: 20px;
+    margin-right: 100px;
     float: right;
 }
-.imgGrid{
+.containerGrid
+{
     display: grid;
-    grid-template-columns: repeat(3, 2fr);
+    grid-template-columns: repeat(3,1fr);
+    gap:50px;
+    margin: 50px 200px;
 }
-
-
+.imgGrid1
+{
+    background-color:rgb(255, 246, 247);
+    padding:20px;
+    width: 200px;
+}
+.imgGrid2
+{
+    background-color:rgb(260, 230, 255);
+    padding:20px;
+    width: 200px;
+}
+.imgGrid3
+{
+    background-color:rgb(230, 254, 255);
+    padding:20px;
+    width: 200px;
+}
+.imgGrid4
+{
+    background-color:rgb(251, 246, 258);
+    padding:20px;
+    width: 200px;
+}
+.imgGrid5
+{
+    background-color:rgb(253, 250, 230);
+    padding:20px;
+    width: 200px;
+}
+.imgGrid6
+{
+    background-color:rgb(253, 237, 233);
+    padding:20px;
+    width: 200px;
+}
+.options ul
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 150px;
+    font-size: medium;
+}
+.spanblue{
+    color: rgb(0, 174, 255);
+}
+.spangrey{
+    color:grey;
+}
+.line
+{
+    width:300px;
+    height: 2px;
+    background: rgb(0, 174, 255);
+}
+.withLine
+{
+    text-align: center;
+}
+.div4-1{
+    padding: 40px;
+    background-color: rgb(228, 255, 246);
+    margin:0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap:100px;
+    font-size: small;
+}
+.div4-2
+{
+    padding: 40px;
+    margin:0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap:100px;
+    font-size: small;
+}
+.div-4-2-1
+{
+    margin-left: 200px;
+    padding: 100px 0px;
+    
+}
+.innerdiv
+{
+    margin:0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: small;
+}
+.innerdiv p{
+    margin-top: 195px;
+    padding: 20px;
+    background-color: rgb(228, 255, 246);
+}
+.deepblue
+{
+    color: rgb(35, 35, 114);
+}
+.div5
+{
+    margin:50px auto;
+    gap: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.padding{
+    padding-top: 50px;
+}
+.innerdiv-5
+{
+    margin:0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+.div6
+{
+    margin: 50px;
+}
+.innerdiv-6{
+    margin: 0 auto;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    
+}
+.bgColor
+{
+    background-color: rgb(228, 255, 246);
+    padding: 20px;
+}
+.footer
+{
+    color: white;
+    margin: 0 auto;
+    padding: 40px;
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+    gap: 100px;
+}
+.footer img{
+    padding: 50px;
+}
+.bgBlack
+{
+    background-color: rgba(32, 32, 32, 0.993);
+    color: rgb(126, 124, 124);
+    font-size: 15px;
+    padding:20px;
+}
+.copyright
+{
+    margin: 0  auto;
+    display: flex;
+    padding:20px;
+    justify-content: center;
+    align-items: center;
+}
+.img img
+{
+    padding :0 150px;
+}
+.terms
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.terms hr {
+    margin:10px;
+    height: 10px;
+}
+.hr{
+    color: rgba(255, 255, 255, 0.26);;
+}
